added tomcat7 setup